--- a/src/web/index.css
+++ b/src/web/index.css
@@ -4,11 +4,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-image: url(./img/01mbux-voice-assistant-hey-mercedes-w1366xh683-cutout.jpg);
 }
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: #025677;
-  color: #fff;
+  /* background-color: #025677; */
+  /* color: #fff; */
+  color:green;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height:600px;
 }
 .container {
   padding: 30px 50px;
@@ -17,27 +24,30 @@ body {
   width: 30%;
   margin: 0 auto;
   position: relative;
+  color:white
+  
 }
 #search-form input {
   width: 100%;
   font-size: 1.5rem;
   padding: 10px 15px;
-  border: 2px solid #ccc;
+  /* border: 2px solid #ccc; */
   border-radius: 2px;
+  color:white
 }
 #search-form button {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
-  background-color: transparent;
+  /* background-color: transparent; */
   outline: none;
   border: none;
   width: 3rem;
   text-align: center;
   font-size: 1.75rem;
   cursor: pointer;
-  color: #333;
+  color:white;
 }
 .info {
   margin-top: 0.5rem;
